fix: cors and auth
